Create Interfaces and implementations.

--- a/out-calories-core/src/main/resources/application.properties
+++ b/out-calories-core/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Database Properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/out-calories
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+server.servlet.context-path=/out-calories-core
