1. Finish Company getById endpoint. 2. Add properties for logging Hibernate queries.

--- a/out-calories-core/src/main/resources/application.properties
+++ b/out-calories-core/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Add sql query logging service
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
