--- a/out-calories-core/src/main/resources/application.properties
+++ b/out-calories-core/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:postgresql://dbpostgresql:5432/out-calories
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.default_schema=dbo_core
 
 # Add sql query logging service
 spring.jpa.show-sql=true
@@ -12,6 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 
+# Service HTTP path
 server.servlet.context-path=/out-calories-core
