--- a/out-calories-core/build.gradle
+++ b/out-calories-core/build.gradle
@@ -10,6 +10,8 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 	implementation 'org.projectlombok:lombok:1.18.18'
+	annotationProcessor "org.projectlombok:lombok:1.18.8"
+	testAnnotationProcessor("org.projectlombok:lombok:1.18.8")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'org.postgresql:postgresql'
 }
