--- a/out-calories-core/build.gradle
+++ b/out-calories-core/build.gradle
@@ -15,3 +15,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'org.postgresql:postgresql'
 }
+
+test {
+	useJUnitPlatform()
+}
