--- a/out-calories-core/build.gradle
+++ b/out-calories-core/build.gradle
@@ -14,7 +14,8 @@ dependencies {
 	testAnnotationProcessor("org.projectlombok:lombok:1.18.8")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'org.postgresql:postgresql'
-	testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.15.3'
+	testImplementation "org.testcontainers:testcontainers:1.15.3"
+	testImplementation "org.testcontainers:postgresql:1.15.3"
 }
 
 test {
