--- a/out-calories-core/build.gradle
+++ b/out-calories-core/build.gradle
@@ -16,6 +16,8 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation "org.testcontainers:testcontainers:1.15.3"
 	testImplementation "org.testcontainers:postgresql:1.15.3"
+	testImplementation "org.testcontainers:junit-jupiter:1.15.3"
+	implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
 }
 
 test {
