--- a/out-calories-core/src/test/resources/application.properties
+++ b/out-calories-core/src/test/resources/application.properties
@@ -1,9 +1,12 @@
 # Database Properties
-spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:tc:postgresql:11.1:///?TC_INITSCRIPT=db-init-script.sql
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 spring.jpa.properties.hibernate.default_schema=dbo_core
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create-drop
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
