Still some problems. Empty database but container runs.

--- a/out-calories-core/src/test/resources/application.properties
+++ b/out-calories-core/src/test/resources/application.properties
@@ -1,8 +1,7 @@
 # Database Properties
-spring.datasource.url=jdbc:tc:postgresql:11.1:///?TC_INITSCRIPT=db-init-script.sql
+spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 spring.jpa.properties.hibernate.default_schema=dbo_core
 
 # Hibernate ddl auto (create, create-drop, validate, update)
