Make DDL as none.

--- a/out-calories-core/src/test/resources/application.properties
+++ b/out-calories-core/src/test/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.default_schema=dbo_core
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = none
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
