--- a/out-calories-core/build.gradle
+++ b/out-calories-core/build.gradle
@@ -10,14 +10,15 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 	implementation 'org.projectlombok:lombok:1.18.18'
+	implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
+	runtimeOnly 'org.postgresql:postgresql'
+	implementation('org.liquibase:liquibase-core')
 	annotationProcessor "org.projectlombok:lombok:1.18.8"
 	testAnnotationProcessor("org.projectlombok:lombok:1.18.8")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation "org.testcontainers:testcontainers:1.15.3"
 	testImplementation "org.testcontainers:postgresql:1.15.3"
 	testImplementation "org.testcontainers:junit-jupiter:1.15.3"
-	implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
 }
 
 test {
