1.Liquibase works. 2.Create tables by liquibase.

--- a/out-calories-core/src/main/resources/application.properties
+++ b/out-calories-core/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.jpa.hibernate.ddl-auto = none
 
 # Service HTTP path
 server.servlet.context-path=/out-calories-core
+
+#liquibase
+spring.liquibase.change-log=classpath:/db/changelog/dbchangelog.xml
+spring.liquibase.default-schema=dbo_core
